--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 B_enable.csv
 cross_connection_matrix.csv
 Combinations.m
+Automatic Filter Network Generation And Extraction Tool (beta v0.1) - Copy.pptx
+*.pptx
+*.pptx
